Add more types